--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,62 @@
 # Welcome to Jekyll!
 #
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: another jekyll blog
+title: another blog
+description: |
+  Another fine responsive  
+  site template freebie  
+  crafted by [HTML5 UP](http://html5up.net)
+owner: c4 # or company name
+first_published: 2016 # if migrating another site, the year of your first publish
 email: phnessu4@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "www.stylejar.com" # the base hostname & protocol for your site
-twitter_username: phnessu4
-github_username:  phnessu4
+url: "http://www.stylejar.com" # the base hostname & protocol for your site
+social:
+  twitter: https://twitter.com/phnessu4
+  github: https://github.com/phnessu4
+  #linkedin-square: https://linkedin.com/in/<username>
+  facebook-official: https://facebook.com/phnessu4
+  #google-plus-square: https://plus.google.com/u/0/+<username>
+  #email: /contact/
+  #flickr:
+  #instagram:
+  #youtube-square:
+  #spotify:
+  #stack-overflow:
+  #vimeo:
+  #reddit:
+  #stubleupon:
+  #delicious:
+  #pied-piper:
+  #digg:
+  #soundcloud:
+  #deviantart:
+  #angellist:
+  #tumblr-square:
+  #stackexchange:
+  #weibo:
+  #trello:
+  #foursquare:
+  #linux:
+  #bitbucket-square:
+  #vk:
+  #slack:
+  #vine:
+  #weixin:
+  #yelp:
+  #skyatlas:
+  #leanpub:
+  #connectdevelop:
+  #ils:
+  #forumbee:
+  #tripadvisor:
+  #amazon:
 
 # Build settings
 markdown: kramdown
+#sass:
+#  style: compressed
 # Time zone
 timezone: asia/shanghai
 # Encoding
