--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,10 @@
 #
 
 # Site settings
-title: another blog
+title: stylejar
 description: |
-  Another fine responsive  
-  site template freebie  
-  crafted by [HTML5 UP](http://html5up.net)
-owner: c4 # or company name
+  If it ain't raining, it ain't training!
+owner: p4 # or company name
 first_published: 2016 # if migrating another site, the year of your first publish
 email: phnessu4@gmail.com
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -15,6 +13,7 @@ url: "http://www.stylejar.com" # the base hostname & protocol for your site
 social:
   twitter: https://twitter.com/phnessu4
   github: https://github.com/phnessu4
+  dribbble: https://dribbble.com/phnessu4
   #linkedin-square: https://linkedin.com/in/<username>
   facebook-official: https://facebook.com/phnessu4
   #google-plus-square: https://plus.google.com/u/0/+<username>
