--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ social:
   #angellist:
   #tumblr-square:
   #stackexchange:
-  #weibo:
+  weibo: http://weibo.com/1756735715
   #trello:
   #foursquare:
   #linux:
